# AlphaTrade_System

./: .env.example  .gitignore  ACTION_PLAN_JPMORGAN.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE_REPORT.md  AUDIT_FIXES_COMPLETED.md  AUDIT_REPORT.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_AND_ENHANCEMENTS.md  DEEP_ANALYSIS_REPORT.md  ENHANCEMENTS_IMPLEMENTED.md  INSTITUTIONAL_AUDIT_REPORT.md  JPMORGAN_OPTIMIZATION_REPORT.md  README.md  alembic.ini  dump.rdb  main.py  pyproject.toml  requirements.txt  start_all.ps1  tmp_core_symbols.txt  tmp_daily_symbols.txt  verify_api.py
.claude/: ralph-loop.local.md  settings.local.json
.claude/agents/: 00-orchestrator-protocol.md  01-system-architect.md  02-ml-quant-engineer.md  03-trading-execution.md  04-data-engineer.md  05-infrastructure-qa.md  06-code-hygiene.md  07-semantic-validator.md  backtest-runner.md  db-helper.md  docker-ops.md  frontend-dev.md  lint-check.md  model-trainer.md  security-audit.md  test-runner.md
.claude/commands/: architect.md  data.md  hygiene.md  infra.md  mlquant.md  orchestrate.md  trader.md  validator.md
.github/workflows/: ci.yml
backtest_results/: backtest_results.json  pipeline_results_20251231_004025.json  system_readiness_report.md
dashboard_ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  test_console.py  vite.config.ts
dashboard_ui/src/: App.tsx  index.css
docker/: Dockerfile  docker-compose.production.yml  docker-compose.yml
docker/alertmanager/: alertmanager.yml
docker/init_db/: 01_extensions.sql  02_hypertables.sql  03_compression.sql  04_retention.sql  05_continuous_aggs.sql
docker/kubernetes/: multi-region-deployment.yaml
docker/ollama/: Modelfile.copilot
docker/production/: Dockerfile.proxy  Dockerfile.ui
docker/prometheus/: prometheus.yml
docker/regions/: docker-compose.us-east.yml  docker-compose.us-west.yml
docs/: BACKTEST_DEVELOPMENT_PLAN.md  BACKTEST_PAPER_TRADING_REVIEW_2026-04-01.md  DATABASE_INVENTORY.md  JPMORGAN_DASHBOARD_MASTER_PLAN.md  JPMORGAN_DASHBOARD_PRODUCTION_STACK.md  JPMORGAN_TRAINING_AI_AGENT_PLAN.md  LIGHTGBM_FULL_AUDIT_20260402.md  LIGHTGBM_TCN_PRODUCTION_TASK_LIST.md  LIGHTGBM_TCN_WORK_PLAN.md  LIGHTGBM_TRAINING_DEEP_REVIEW_20260402.md  LIVE_46_SYMBOL_TRAINING_PLAN.md  PRODUCTION_READINESS_AUDIT_20260405.md  TRAINING_EXECUTION_PLAN.md  TRAINING_OPTIMIZATION_GUIDE.md  TRAINING_PIPELINE_AUDIT.md  WAVE1_CLEAN_SNAPSHOT_RESULTS_20260402.md  WAVE1_D1_SYMBOL_DIAGNOSIS_20260404.md  WAVE1_MODEL_TRAINING_PLAN_20260402.md  WAVE1_RUND_ANALYSIS_AND_TRAINING_PLAN_20260402.md  kurumsal_canli_islem_donusum_plani.md  kurumsal_canli_islem_ilerleme_raporu.md  model_karlilik_gelistirme_plani_2026-02-27.md
quant_trading_system/: __init__.py
quant_trading_system/alpha/: __init__.py  alpha_base.py  alpha_combiner.py  alpha_metrics.py  mean_reversion_alphas.py  ml_alphas.py  momentum_alphas.py  regime_detection.py
quant_trading_system/backtest/: __init__.py  analyzer.py  engine.py  optimizer.py  performance_attribution.py  promotion.py  replay.py  simulator.py
quant_trading_system/config/: __init__.py  alpaca_config.yaml  feature_flags.py  model_configs.yaml  regional.py  risk_params.yaml  secure_config.py  settings.py  symbols.yaml
quant_trading_system/core/: __init__.py  circuit_breaker.py  cqrs.py  data_types.py  events.py  exceptions.py  lazy_loader.py  redis_bridge.py  registry.py  (+3 more)
scripts/: __init__.py  backtest.py  data.py  deploy.py  export_training_data.py  features.py  health.py  institutional_training_pipeline.py  launch_wave1_wsl_clean_elastic_research_h12.sh  launch_wave1_wsl_clean_ranker_research_h12.sh  launch_wave1_wsl_clean_ranker_scope_safe_h12.sh  launch_wave1_wsl_clean_xgboost_research_h12.sh  launch_wave1_wsl_run1.ps1  launch_wave1_wsl_run1.sh  launch_wave1_wsl_run2.sh  launch_wave1_wsl_run3.sh  launch_wave1_wsl_runB_clean_ranker_h12.sh  launch_wave1_wsl_runC0_clean_ranker_diag_h12.sh  launch_wave1_wsl_runC1_clean_ranker_sigmoid_h12.sh  launch_wave1_wsl_runC1b_clean_ranker_nocal_h12.sh  launch_wave1_wsl_runC2_clean_ranker_noband_h12.sh  launch_wave1_wsl_runD0_clean_ranker_priceonly_h12.sh  launch_wave1_wsl_runD1_clean_ranker_seccorp_h12.sh  launch_wave1_wsl_runD1b_clean_ranker_seccorp_core8_h12.sh  launch_wave1_wsl_runD1c_clean_ranker_seccorp_stable5_h12.sh  launch_wave1_wsl_runD1d_clean_ranker_seccorp_symbolaware_core11_h12.sh  launch_wave1_wsl_runD1e_clean_ranker_seccorpnews_symbolaware_core11_h12.sh  launch_wave1_wsl_runD1f_clean_ranker_seccorpshortftd_symbolaware_core11_h12.sh  launch_wave1_wsl_runD1g_clean_ranker_seccorpnewsshortftd_symbolaware_core11_h12.sh  launch_wave1_wsl_runD2_clean_ranker_seccorp_hardening_h12.sh  launch_wave1_wsl_runD2f_clean_ranker_seccorpshortftd_hardening_symbolpriors_h12.sh  launch_wave1_wsl_runD3_clean_ranker_seccorp_objectivepatch_h12.sh  launch_wave1_wsl_runE0_clean_xgboost_seccorp_h12.sh  launch_wave1_wsl_runE1_clean_elastic_seccorp_h12.sh  launch_wave1_wsl_runP0_promotion_ranker_seccorpshortftd_hardening_symbolpriors_h12.sh  load_data.py  migrate_db.py  migrate_to_postgres.py  replay.py  repo_audit.py  (+12 more)
tests/: __init__.py  conftest.py
usb_ec_backup/: RUN_EC.nsh  startup.nsh
(+237 files in other folders)
