[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "1.0.0"
description = "Institutional-Grade Algorithmic Trading System with ML/DL Integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AlphaTrade", email = "contact@alphatrade.dev"}
]
keywords = [
    "trading",
    "algorithmic-trading",
    "quantitative-finance",
    "machine-learning",
    "deep-learning",
    "alpaca",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",

    # Data Processing
    "polars>=0.19.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    "optuna>=3.4.0",

    # Deep Learning
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",

    # Technical Analysis
    "pandas-ta>=0.3.14b",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "redis>=5.0.1",

    # API & Web
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "websockets>=12.0",

    # Alpaca
    "alpaca-py>=0.13.0",

    # Monitoring
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
# GPU acceleration for feature computation (cuDF/RAPIDS)
# Note: Requires NVIDIA GPU and CUDA 11.8+
# Install via: pip install cudf-cu11 cupy-cuda11x
gpu = [
    "numba>=0.58.0",
    # cudf and cupy are installed separately via conda or pip
    # as they require specific CUDA versions
]
# Alternative data source providers
altdata = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
# Full installation with all optional features
full = [
    "numba>=0.58.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "shap>=0.43.0",  # Model explainability
    "lime>=0.2.0",   # Model explainability
]

[project.urls]
Homepage = "https://github.com/alphatrade/quant-trading-system"
Documentation = "https://alphatrade.github.io/quant-trading-system"
Repository = "https://github.com/alphatrade/quant-trading-system.git"
Issues = "https://github.com/alphatrade/quant-trading-system/issues"

[project.scripts]
quant-train = "scripts.train:main"
quant-backtest = "scripts.backtest:main"
quant-paper = "scripts.trade:main_paper"
quant-live = "scripts.trade:main_live"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_trading_system*"]

[tool.setuptools.package-data]
quant_trading_system = ["config/*.yaml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["quant_trading_system"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["quant_trading_system"]
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
